syntax = "proto3";

package job;

import "google/protobuf/struct.proto";

option go_package = "valet/internal/handler/jobhdl/protobuf";


message CreateJobRequest {
    string name = 1;
    string description = 2;
    string task_name = 3;
    int32 timeout = 4;
    google.protobuf.Struct task_params = 5;
    string run_at = 6;
}

message GetJobRequest {
    string id = 1;
}

message UpdateJobRequest {
    string id = 1;
    string name = 2;
    string description = 3;
}

message DeleteJobRequest {
    string id = 1;
}