syntax = "proto3";

package pipeline;

import "google/protobuf/timestamp.proto";
import "internal/handler/jobhdl/protos/job_response.proto";

option go_package = "github.com/svaloumas/valet/internal/handler/pipelinehdl/protobuf;pb";


message CreatePipelineResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    repeated job.CreateJobResponse jobs = 4;
    int32 status = 5;
    google.protobuf.Timestamp run_at = 6;
    google.protobuf.Timestamp created_at = 7;
}

message GetPipelineResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 status = 4;
    google.protobuf.Timestamp run_at = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp started_at = 7;
    google.protobuf.Timestamp completed_at = 8;
    int64 duration = 9;
}

message GetPipelineJobsResponse {
    repeated job.GetJobResponse jobs = 1;
}

message GetPipelinesResponse {
    repeated GetPipelineResponse pipelines = 1;
}

// Empty response
message UpdatePipelineResponse {}
 
// Empty response
message DeletePipelineResponse {}